<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginTop="80dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_weight="0"
        android:autofillHints="false"
        android:background="@null"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        tools:ignore="LabelFor">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="16dp"
        android:textSize="26sp"
        android:textAlignment="textEnd"
        android:layout_marginBottom="45dp" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="22dp"
        android:padding="10dp"
        android:layout_weight="0"
        android:background="#00000000"
        android:contentDescription="@android:string/defaultMsisdnAlphaTag"
        android:src="@drawable/backspace"
        tools:ignore="RtlHardcoded,TouchTargetSizeCheck, UsingOnClickInXml"
        android:onClick="backspaceBTN"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bdbebd"
        android:alpha="0.2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="sans-serif-light"
                android:padding="12dp"
                android:text="@string/clear"
                android:textColor="#ff0800"
                android:textSize="40sp"
                android:onClick="clearBTN"
                tools:ignore="UsingOnClickInXml" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bracketBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:fontFamily="sans-serif-light"
                android:padding="12dp"
                android:text="@string/bracket"
                android:textColor="#689F38"
                android:textSize="40sp"
                android:onClick="bracketBTN"
                tools:ignore="UsingOnClickInXml" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/percentageBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:textColor="#689F38"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                tools:ignore="TextContrastCheck,UsingOnClickInXml"
                android:background="@drawable/circle"
                android:onClick="percentageBTN"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="#689F38"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                tools:ignore="TextContrastCheck,UsingOnClickInXml"
                android:background="@drawable/circle"
                android:onClick="divideBTN"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="sevenBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="eightBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nineBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="nineBTN"
                tools:ignore="UsingOnClickInXml"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:text="@string/multi"
                android:textColor="#689F38"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                tools:ignore="TextContrastCheck, UsingOnClickInXML"
                android:background="@drawable/circle"
                android:onClick="multiBTN"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="fourBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiveBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="fiveBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="sixBTN"
                tools:ignore="UsingOnClickInXml"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="#689F38"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/circle"
                android:onClick="minusBTN"
                tools:ignore="UsingOnClickInXml"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oneBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="oneBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="twoBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threeBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="threeBTN"
                tools:ignore="UsingOnClickInXml"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="#689F38"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                tools:ignore="TextContrastCheck, UsingOnClickInXml"
                android:background="@drawable/circle"
                android:onClick="plusBTN"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusMinusBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="plusMinusBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="zeroBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dotBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/circle"
                android:onClick="dotBTN"
                tools:ignore="UsingOnClickInXml"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:background="@drawable/green_circle"
                android:onClick="equalBTN"
                tools:ignore="UsingOnClickInXml"/>
        </TableRow>
    </TableLayout>
</LinearLayout>